# shuup

./: .env.example  .eslintrc.json  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  DJANGO3_COMPATIBILITY_NOTES.md  Dockerfile  Dockerfile.uv  MIGRATION_SUMMARY.md  Makefile  Pipfile  README.rst  build_resources.py  docker-compose-dev.yml  docker-compose.uv.yml  generate_apidoc.py  generate_requirements.py  hatch_build.py  migrate_to_uv.sh  package-lock.json  package.json  pyproject.toml  regenerate_requirements.sh  requirements-dev-ci-minimal.txt  requirements-dev-ci.txt  requirements-dev-minimal.txt  requirements-dev.txt  requirements-doc-minimal.txt  requirements-doc.txt  requirements-minimal.txt  requirements-test-minimal.txt  requirements-tests.txt  requirements.txt  setup.py  test_tool_exclusions.py  test_versions.py  uv.toml
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/workflows/: docs.yml  pypi.yml  requirements.yml  shuup.yml
_misc/: check_sanity.py  doccov.py  ensure_code_style.py  ensure_license_headers.py  ensure_unicode_literals.py  language_twister.py  sanity_utils.py
branding/: generate_variants.py
doc/: changelog.rst  conf.py
doc/_ext/: django_sphinx.py  djangodocs.py  shuup_introspection_helper.py
doc/api/: shuup.discounts.rst
doc/howto/: new_tab.rst
doc/security/: admin-interface.rst  index.rst  overview.rst
docs/: BUILD_AUTOMATION.md  DOCKER_MIGRATION.md  REQUIREMENTS_MIGRATION.md  UV_SETUP_GUIDE.md  UV_VERSION_MIGRATION.md
scripts/: create_superuser.py
shuup/: __init__.py  compat.py  configuration.py
shuup/addons/: __init__.py  installer.py  manager.py  reloader.py
shuup/admin/: __init__.py  base.py  browser_config.py  build_css_resources.js  build_js_resources.js  currencybound.py  error_handlers.py  form_modifier.py  form_part.py  menu.py  middleware.py  module_registry.py  npm-shrinkwrap.json  package.json  settings.py  shop_provider.py  signal_handling.py  signals.py  supplier_provider.py  toolbar.py  urls.py
shuup/apps/: __init__.py  provides.py  settings.py
shuup/campaigns/: __init__.py  apps.py  consts.py  exceptions.py  modules.py  reports.py  signal_handlers.py
shuup/core/: __init__.py  constants.py  error_handling.py  excs.py  middleware.py  settings.py  settings_provider.py  shop_provider.py  signal_handlers.py  signals.py  tasks.py  telemetry.py  validators.py
shuup/customer_group_pricing/: __init__.py  admin_form_part.py  models.py  module.py  signal_handers.py
shuup/default_importer/: apps.py
shuup/default_reports/: apps.py  forms.py  mixins.py
shuup/default_tax/: __init__.py  models.py  module.py
shuup/discounts/: apps.py  exceptions.py  modules.py  plugins.py  settings.py  signal_handlers.py  tasks.py  utils.py
shuup/front/: .gitignore  __init__.py  error_handlers.py  middleware.py  notify_events.py  npm-shrinkwrap.json  settings.py  signal_handlers.py  signals.py  urls.py
shuup/gdpr/: anonymizer.py  apps.py  dashboard_items.py  forms.py  models.py  npm-shrinkwrap.json  providers.py  receivers.py  resources.py  serializers.py  settings.py  signal_handlers.py  signals.py  snippet_blocker.py  tasks.py  urls.py  utils.py  views.py
shuup/guide/: __init__.py  admin_module.py  apps.py  settings.py
shuup/importer/: __init__.py  _mapper.py  apps.py  exceptions.py  tasks.py  transforms.py
shuup/notify/: __init__.py  base.py  enums.py  notify_events.py  npm-shrinkwrap.json  runner.py  script.py  script_templates.py  settings.py  signal_handlers.py  signals.py  tasks.py  template.py  typology.py
shuup/order_printouts/: apps.py  utils.py
shuup/regions/: apps.py  npm-shrinkwrap.json  resources.py
shuup/reports/: apps.py  forms.py  report.py  settings.py  utils.py  writer.py
shuup/simple_cms/: __init__.py  layout.py  models.py  plugins.py  settings.py  template_helpers.py  templates.py  urls.py  utils.py  views.py
shuup/simple_supplier/: __init__.py  forms.py  models.py  module.py  notify_events.py  notify_script_template.py  product_copy_signal_handler.py  signal_handlers.py  tasks.py  utils.py
shuup/tasks/: apps.py  models.py  notify_events.py  utils.py
shuup/testing/: __init__.py  admin_main_menu_updater.py  admin_product_validator.py  basket_middleware.py  browser_utils.py  checkout_with_login_and_register_urls.py  extend_classes.py  factories.py  image_generator.py  importers.py  line_properties_descriptor.py  mock_population.py  notify_script_templates.py  product_factory.py  receivers.py  service_forms.py  shop_factory.py  shop_product_factory.py  shop_provider.py  simple_checkout_phase.py  single_page_checkout_test_urls.py  single_page_checkout_with_login_and_register_conf.py  soup_utils.py  subscription_option_provider.py  supplier_provider.py  text_data.py  utils.py
shuup/utils/: __init__.py  _unitted_decimal.py  analog.py  babel_precision_provider.py  dates.py  decorators.py  deprecation.py  django_compat.py  djangoenv.py  excs.py  fields.py  filer.py  form_group.py  forms.py  http.py  i18n.py  importing.py  iterables.py  migrations.py  models.py  money.py  mptt.py  multilanguage_model_form.py  numbers.py  objects.py  patterns.py  pdf.py  properties.py  serialization.py  settings_doc.py  setup.py  text.py  translation.py
shuup/xtheme/: .gitignore  __init__.py  _theme.py  admin_injector.py  cache.py  editing.py  engine.py  extenders.py  forms.py  middleware.py  models.py  notes.md  npm-shrinkwrap.json  object_selector.py  parsing.py  rendering.py  resources.py  settings.py  signal_handlers.py  template_ns.py  testing.py  urls.py  utils.py  view_config.py
shuup_setup_utils/: commands.py  create_superuser.py  excludes.py  finding.py  nodejs_verify.py  parsing.py  resource_building.py  scripts.py  versions.py
shuup_tests/: CURRENT-ISSUES.md  conftest.py
shuup_tests/admin/: test_active_shop_and_supplier.py  test_admin_menu.py  test_admin_menu_arrange_staff.py  test_admin_menu_arrange_superuser.py  test_admin_menu_arrange_supplier.py  test_attributes_view.py  (+79 more)
shuup_workbench/: test_settings.py  test_urls.py  urls.py
(+1652 files in other folders)
