[build-system]
requires = [
    "setuptools>=68", 
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "shuup"
dynamic = ["version"]
description = "E-Commerce Platform"
authors = [
    {name = "Shuup Commerce Inc.", email = "shuup@shuup.com"}
]
license = "OSL-3.0"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "babel>=2.12.0",
    "bleach>=6.0.0",
    "django>=3.2,<4.3",
    "django-bootstrap3>=21.2",
    "django-countries>=7.5.0",
    "django-enumfields>=2.1.1",
    "django-filer>=2.2.0",
    "django-filter>=23.0",
    "django-jinja>=2.11.0",
    "django-mptt>=0.14.0",
    "django-parler>=2.3",
    "django-polymorphic>=3.1.0",
    "django-registration-redux>=2.11",
    "django-reversion>=5.0.0",
    "django-timezone-field>=5.0",
    "djangorestframework>=3.14.0",
    "factory-boy>=3.2.0",
    "Faker>=18.0.0",
    "Jinja2>=3.1.0",
    "jsonfield>=3.1.0",
    "keyring>=23",
    "keyrings.alt>=4",
    "lxml>=4.9.0",
    "Markdown>=3.4.0",
    "openpyxl>=3.1.0",
    "python-dateutil>=2.8",
    "shuup-mirage-field>=2.2.0,<3",
    "tomli>=2.0.0 ; python_full_version < '3.11'",
    "pytz>=2022.1",
    "requests>=2.28.0",
    "six>=1.16.0",
    "unicodecsv>=0.14.1",
    "xlrd>=2.0.0",
    "setuptools>=75.3.2",
]

[project.urls]
Homepage = "http://shuup.com/"
Repository = "https://github.com/shuup/shuup"
Documentation = "https://shuup.readthedocs.io/"


[tool.setuptools.dynamic]
version = {attr = "shuup._version.__version__"}

[tool.setuptools.packages.find]
exclude = ["shuup_tests", "shuup_tests.*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.txt", "*.js", "*.css", "*.png", "*.gif", "*.jpg", "*.jpeg", "*.svg", "*.ico", "*.woff", "*.woff2", "*.ttf", "*.eot"]

[tool.setuptools]
include-package-data = true

[tool.black]
exclude = "migrations/.*|.eggs|.git|.tox|.venv|_build|buck-out|build|dist"
line_length = 120
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
known_django = "django"
known_first_party = "shuup"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["*/migrations/*", "*/venv/*", "*/.venv/*"]

[tool.flake8]
max-line-length = 120
ignore = ["E203", "W503", "E501"]
exclude = [
    "migrations",
    "venv",
    ".venv",
    ".git",
    ".tox",
    "dist",
    "doc",
    "*.egg",
    "build"
]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "shuup_workbench.test_settings"
addopts = [
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=shuup",
    "--cov-report=html",
    "--cov-report=term-missing"
]
testpaths = ["shuup_tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["shuup"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/.venv/*",
    "*/venv/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pylint.main]
load-plugins = ["pylint_django"]
django-settings-module = "shuup_workbench.settings.dev"

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-branches",
    "duplicate-code",
]

[tool.pylint.format]
max-line-length = 120
