[build-system]
requires = [
    "setuptools>=68", 
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "shuup"
version = "3.2.25.post0.dev"
description = "E-Commerce Platform"
authors = [
    {name = "Shuup Commerce Inc.", email = "shuup@shuup.com"}
]
license = "OSL-3.0"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "babel>=2.12.0",
    "bleach>=6.0.0",
    "django>=3.2,<4.3",
    "django-bootstrap3>=21.2",
    "django-countries>=7.5.0",
    "django-enumfields>=2.1.1",
    "django-filer>=2.2.0",
    "django-filter>=23.0",
    "django-jinja>=2.11.0",
    "django-mptt>=0.14.0",
    "django-parler>=2.3",
    "django-polymorphic>=3.1.0",
    "django-registration-redux>=2.11",
    "django-reversion>=5.0.0",
    "django-timezone-field>=5.0",
    "djangorestframework>=3.14.0",
    "factory-boy>=3.2.0",
    "Faker>=18.0.0",
    "Jinja2>=3.1.0",
    "jsonfield>=3.1.0",
    "keyring>=23",
    "keyrings.alt>=4",
    "lxml>=4.9.0",
    "Markdown>=3.4.0",
    "openpyxl>=3.1.0",
    "python-dateutil>=2.8",
    "shuup-mirage-field>=2.2.0,<3",
    "tomli>=2.0.0 ; python_full_version < '3.11'",
    "pytz>=2022.1",
    "requests>=2.28.0",
    "six>=1.16.0",
    "xlrd>=2.0.0",
    "setuptools>=75.3.2",
]

[project.urls]
Homepage = "http://shuup.com/"
Repository = "https://github.com/shuup/shuup"
Documentation = "https://shuup.readthedocs.io/"

[tool.setuptools.packages.find]
exclude = ["shuup_tests", "shuup_tests.*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.txt", "*.js", "*.css", "*.png", "*.gif", "*.jpg", "*.jpeg", "*.svg", "*.ico", "*.woff", "*.woff2", "*.ttf", "*.eot"]

[tool.setuptools]
include-package-data = true

[tool.black]
exclude = "migrations/.*|.eggs|.git|.tox|.venv|_build|buck-out|build|dist"
line_length = 120
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
known_django = "django"
known_first_party = "shuup"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["*/migrations/*", "*/venv/*", "*/.venv/*"]

[tool.flake8]
max-line-length = 120
ignore = ["E203", "W503", "E501"]
exclude = [
    "migrations",
    "venv",
    ".venv",
    ".git",
    ".tox",
    "dist",
    "doc",
    "*.egg",
    "build"
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "shuup_workbench.test_settings"
addopts = [
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=shuup",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80"
]
testpaths = ["shuup_tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests", 
    "unit: marks tests as unit tests",
    "browser: marks tests that require browser functionality",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["shuup"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/.venv/*",
    "*/venv/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pylint.main]
load-plugins = ["pylint_django"]
django-settings-module = "shuup_workbench.settings.dev"

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-branches",
    "duplicate-code",
]

[tool.pylint.format]
max-line-length = 120

[tool.uv]
dev-dependencies = []  # Use dependency-groups instead

[tool.uv.sources]
# Pin to more recent versions in development
pytest = { git = "https://github.com/pytest-dev/pytest.git", tag = "8.0.0" }

[tool.ruff]
line-length = 120
target-version = "py38"
exclude = [
    "migrations",
    "venv",
    ".venv", 
    ".git",
    ".tox",
    "dist",
    "doc",
    "*.egg",
    "build",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"migrations/*.py" = ["E501", "F401"]

[dependency-groups]
dev = [
    # Development tools
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    
    # Testing tools  
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=4.0.0",
    "pytest-splinter>=3.3.2",
    "coverage>=7.4.0",
    "codecov>=2.1.13",
    
    # Browser testing
    "selenium>=4.15.0",
    "splinter>=0.21.0",
    
    # Documentation tools
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    
    # Additional development tools
    "pre-commit>=3.6.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    
    # PDF generation and imaging for tests
    "weasyprint>=61.0",
    "pillow>=10.0.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0", 
    "pytest-cov>=4.0.0",
    "pytest-splinter>=3.3.2",
    "coverage>=7.4.0",
    "selenium>=4.15.0",
    "splinter>=0.21.0",
    "weasyprint>=61.0",
    "pillow>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "mock>=5.0.0",
]

docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
]

[project.scripts]
shuup-build-resources = "shuup_setup_utils.scripts:build_resources_main"
